model counter added

--- a/django_app/templates/home_page.html
+++ b/django_app/templates/home_page.html
@@ -5,4 +5,9 @@
     <br />
     <br />
     Welcome to Django! This a two model app for deep diving into Django web application development.
+    <br />
+    <br />
+    Total Author: {{total_author}}
+    <br />
+    Total Book: {{total_book}}
 {% endblock %}
