--- a/django_app/templates/home_page.html
+++ b/django_app/templates/home_page.html
@@ -4,7 +4,7 @@
 {% block content %}
     <br />
     <br />
-    Welcome to Django! This a two model app for deep diving into Django web application development.
+    Welcome to Django! This is a two model app for deep diving into Django web application development.
     <br />
     <br />
     Total Author: {{total_author}}
